removing vertical-align fix as it breaks in some cases

--- a/kayzen-gs.scss
+++ b/kayzen-gs.scss
@@ -130,13 +130,6 @@ $scale: null;
 			text-rendering: auto;
 		}		
 	}
-	// Pseudo class to allow for vertical-aligning
-	&:before {
-		content: "";
-		height: 100%;
-		display: inline-block;
-		vertical-align: middle;
-	}
 }
 
 %flow-row {
